analisador lexico sintaxico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement statement_list
Rule 4     statement -> RESERVED IDENTIFIER OPERATOR expression SEPARATOR
Rule 5     statement -> IDENTIFIER OPERATOR term OPERATOR term SEPARATOR
Rule 6     statement -> IDENTIFIER OPERATOR term SEPARATOR
Rule 7     statement -> RESERVED SEPARATOR expression SEPARATOR block
Rule 8     statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED block
Rule 9     statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED statement
Rule 10    block -> SEPARATOR statement_list SEPARATOR
Rule 11    block -> SEPARATOR SEPARATOR
Rule 12    expression -> term
Rule 13    expression -> term comparison_operator term
Rule 14    term -> IDENTIFIER
Rule 15    term -> NUMBER
Rule 16    term -> OPERATOR IDENTIFIER
Rule 17    term -> OPERATOR NUMBER
Rule 18    comparison_operator -> OPERATOR

Terminals, with rules where they appear

IDENTIFIER           : 4 5 6 14 16
NUMBER               : 15 17
OPERATOR             : 4 5 5 6 16 17 18
RESERVED             : 4 7 8 8 9 9
SEPARATOR            : 4 5 6 7 7 8 8 9 9 10 10 11 11
error                : 

Nonterminals, with rules where they appear

block                : 7 8 8 9
comparison_operator  : 13
expression           : 4 7 8 9
program              : 0
statement            : 2 3 9
statement_list       : 1 3 10
term                 : 5 5 6 12 13 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . RESERVED IDENTIFIER OPERATOR expression SEPARATOR
    (5) statement -> . IDENTIFIER OPERATOR term OPERATOR term SEPARATOR
    (6) statement -> . IDENTIFIER OPERATOR term SEPARATOR
    (7) statement -> . RESERVED SEPARATOR expression SEPARATOR block
    (8) statement -> . RESERVED SEPARATOR expression SEPARATOR block RESERVED block
    (9) statement -> . RESERVED SEPARATOR expression SEPARATOR block RESERVED statement

    RESERVED        shift and go to state 4
    IDENTIFIER      shift and go to state 5

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .

    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (2) statement_list -> statement .
    (3) statement_list -> statement . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . RESERVED IDENTIFIER OPERATOR expression SEPARATOR
    (5) statement -> . IDENTIFIER OPERATOR term OPERATOR term SEPARATOR
    (6) statement -> . IDENTIFIER OPERATOR term SEPARATOR
    (7) statement -> . RESERVED SEPARATOR expression SEPARATOR block
    (8) statement -> . RESERVED SEPARATOR expression SEPARATOR block RESERVED block
    (9) statement -> . RESERVED SEPARATOR expression SEPARATOR block RESERVED statement

    $end            reduce using rule 2 (statement_list -> statement .)
    SEPARATOR       reduce using rule 2 (statement_list -> statement .)
    RESERVED        shift and go to state 4
    IDENTIFIER      shift and go to state 5

    statement                      shift and go to state 3
    statement_list                 shift and go to state 6

state 4

    (4) statement -> RESERVED . IDENTIFIER OPERATOR expression SEPARATOR
    (7) statement -> RESERVED . SEPARATOR expression SEPARATOR block
    (8) statement -> RESERVED . SEPARATOR expression SEPARATOR block RESERVED block
    (9) statement -> RESERVED . SEPARATOR expression SEPARATOR block RESERVED statement

    IDENTIFIER      shift and go to state 7
    SEPARATOR       shift and go to state 8


state 5

    (5) statement -> IDENTIFIER . OPERATOR term OPERATOR term SEPARATOR
    (6) statement -> IDENTIFIER . OPERATOR term SEPARATOR

    OPERATOR        shift and go to state 9


state 6

    (3) statement_list -> statement statement_list .

    $end            reduce using rule 3 (statement_list -> statement statement_list .)
    SEPARATOR       reduce using rule 3 (statement_list -> statement statement_list .)


state 7

    (4) statement -> RESERVED IDENTIFIER . OPERATOR expression SEPARATOR

    OPERATOR        shift and go to state 10


state 8

    (7) statement -> RESERVED SEPARATOR . expression SEPARATOR block
    (8) statement -> RESERVED SEPARATOR . expression SEPARATOR block RESERVED block
    (9) statement -> RESERVED SEPARATOR . expression SEPARATOR block RESERVED statement
    (12) expression -> . term
    (13) expression -> . term comparison_operator term
    (14) term -> . IDENTIFIER
    (15) term -> . NUMBER
    (16) term -> . OPERATOR IDENTIFIER
    (17) term -> . OPERATOR NUMBER

    IDENTIFIER      shift and go to state 13
    NUMBER          shift and go to state 14
    OPERATOR        shift and go to state 15

    expression                     shift and go to state 11
    term                           shift and go to state 12

state 9

    (5) statement -> IDENTIFIER OPERATOR . term OPERATOR term SEPARATOR
    (6) statement -> IDENTIFIER OPERATOR . term SEPARATOR
    (14) term -> . IDENTIFIER
    (15) term -> . NUMBER
    (16) term -> . OPERATOR IDENTIFIER
    (17) term -> . OPERATOR NUMBER

    IDENTIFIER      shift and go to state 13
    NUMBER          shift and go to state 14
    OPERATOR        shift and go to state 15

    term                           shift and go to state 16

state 10

    (4) statement -> RESERVED IDENTIFIER OPERATOR . expression SEPARATOR
    (12) expression -> . term
    (13) expression -> . term comparison_operator term
    (14) term -> . IDENTIFIER
    (15) term -> . NUMBER
    (16) term -> . OPERATOR IDENTIFIER
    (17) term -> . OPERATOR NUMBER

    IDENTIFIER      shift and go to state 13
    NUMBER          shift and go to state 14
    OPERATOR        shift and go to state 15

    expression                     shift and go to state 17
    term                           shift and go to state 12

state 11

    (7) statement -> RESERVED SEPARATOR expression . SEPARATOR block
    (8) statement -> RESERVED SEPARATOR expression . SEPARATOR block RESERVED block
    (9) statement -> RESERVED SEPARATOR expression . SEPARATOR block RESERVED statement

    SEPARATOR       shift and go to state 18


state 12

    (12) expression -> term .
    (13) expression -> term . comparison_operator term
    (18) comparison_operator -> . OPERATOR

    SEPARATOR       reduce using rule 12 (expression -> term .)
    OPERATOR        shift and go to state 20

    comparison_operator            shift and go to state 19

state 13

    (14) term -> IDENTIFIER .

    OPERATOR        reduce using rule 14 (term -> IDENTIFIER .)
    SEPARATOR       reduce using rule 14 (term -> IDENTIFIER .)


state 14

    (15) term -> NUMBER .

    OPERATOR        reduce using rule 15 (term -> NUMBER .)
    SEPARATOR       reduce using rule 15 (term -> NUMBER .)


state 15

    (16) term -> OPERATOR . IDENTIFIER
    (17) term -> OPERATOR . NUMBER

    IDENTIFIER      shift and go to state 21
    NUMBER          shift and go to state 22


state 16

    (5) statement -> IDENTIFIER OPERATOR term . OPERATOR term SEPARATOR
    (6) statement -> IDENTIFIER OPERATOR term . SEPARATOR

    OPERATOR        shift and go to state 23
    SEPARATOR       shift and go to state 24


state 17

    (4) statement -> RESERVED IDENTIFIER OPERATOR expression . SEPARATOR

    SEPARATOR       shift and go to state 25


state 18

    (7) statement -> RESERVED SEPARATOR expression SEPARATOR . block
    (8) statement -> RESERVED SEPARATOR expression SEPARATOR . block RESERVED block
    (9) statement -> RESERVED SEPARATOR expression SEPARATOR . block RESERVED statement
    (10) block -> . SEPARATOR statement_list SEPARATOR
    (11) block -> . SEPARATOR SEPARATOR

    SEPARATOR       shift and go to state 26

    block                          shift and go to state 27

state 19

    (13) expression -> term comparison_operator . term
    (14) term -> . IDENTIFIER
    (15) term -> . NUMBER
    (16) term -> . OPERATOR IDENTIFIER
    (17) term -> . OPERATOR NUMBER

    IDENTIFIER      shift and go to state 13
    NUMBER          shift and go to state 14
    OPERATOR        shift and go to state 15

    term                           shift and go to state 28

state 20

    (18) comparison_operator -> OPERATOR .

    IDENTIFIER      reduce using rule 18 (comparison_operator -> OPERATOR .)
    NUMBER          reduce using rule 18 (comparison_operator -> OPERATOR .)
    OPERATOR        reduce using rule 18 (comparison_operator -> OPERATOR .)


state 21

    (16) term -> OPERATOR IDENTIFIER .

    OPERATOR        reduce using rule 16 (term -> OPERATOR IDENTIFIER .)
    SEPARATOR       reduce using rule 16 (term -> OPERATOR IDENTIFIER .)


state 22

    (17) term -> OPERATOR NUMBER .

    OPERATOR        reduce using rule 17 (term -> OPERATOR NUMBER .)
    SEPARATOR       reduce using rule 17 (term -> OPERATOR NUMBER .)


state 23

    (5) statement -> IDENTIFIER OPERATOR term OPERATOR . term SEPARATOR
    (14) term -> . IDENTIFIER
    (15) term -> . NUMBER
    (16) term -> . OPERATOR IDENTIFIER
    (17) term -> . OPERATOR NUMBER

    IDENTIFIER      shift and go to state 13
    NUMBER          shift and go to state 14
    OPERATOR        shift and go to state 15

    term                           shift and go to state 29

state 24

    (6) statement -> IDENTIFIER OPERATOR term SEPARATOR .

    RESERVED        reduce using rule 6 (statement -> IDENTIFIER OPERATOR term SEPARATOR .)
    IDENTIFIER      reduce using rule 6 (statement -> IDENTIFIER OPERATOR term SEPARATOR .)
    $end            reduce using rule 6 (statement -> IDENTIFIER OPERATOR term SEPARATOR .)
    SEPARATOR       reduce using rule 6 (statement -> IDENTIFIER OPERATOR term SEPARATOR .)


state 25

    (4) statement -> RESERVED IDENTIFIER OPERATOR expression SEPARATOR .

    RESERVED        reduce using rule 4 (statement -> RESERVED IDENTIFIER OPERATOR expression SEPARATOR .)
    IDENTIFIER      reduce using rule 4 (statement -> RESERVED IDENTIFIER OPERATOR expression SEPARATOR .)
    $end            reduce using rule 4 (statement -> RESERVED IDENTIFIER OPERATOR expression SEPARATOR .)
    SEPARATOR       reduce using rule 4 (statement -> RESERVED IDENTIFIER OPERATOR expression SEPARATOR .)


state 26

    (10) block -> SEPARATOR . statement_list SEPARATOR
    (11) block -> SEPARATOR . SEPARATOR
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . RESERVED IDENTIFIER OPERATOR expression SEPARATOR
    (5) statement -> . IDENTIFIER OPERATOR term OPERATOR term SEPARATOR
    (6) statement -> . IDENTIFIER OPERATOR term SEPARATOR
    (7) statement -> . RESERVED SEPARATOR expression SEPARATOR block
    (8) statement -> . RESERVED SEPARATOR expression SEPARATOR block RESERVED block
    (9) statement -> . RESERVED SEPARATOR expression SEPARATOR block RESERVED statement

    SEPARATOR       shift and go to state 30
    RESERVED        shift and go to state 4
    IDENTIFIER      shift and go to state 5

    statement_list                 shift and go to state 31
    statement                      shift and go to state 3

state 27

    (7) statement -> RESERVED SEPARATOR expression SEPARATOR block .
    (8) statement -> RESERVED SEPARATOR expression SEPARATOR block . RESERVED block
    (9) statement -> RESERVED SEPARATOR expression SEPARATOR block . RESERVED statement

  ! shift/reduce conflict for RESERVED resolved as shift
    IDENTIFIER      reduce using rule 7 (statement -> RESERVED SEPARATOR expression SEPARATOR block .)
    $end            reduce using rule 7 (statement -> RESERVED SEPARATOR expression SEPARATOR block .)
    SEPARATOR       reduce using rule 7 (statement -> RESERVED SEPARATOR expression SEPARATOR block .)
    RESERVED        shift and go to state 32

  ! RESERVED        [ reduce using rule 7 (statement -> RESERVED SEPARATOR expression SEPARATOR block .) ]


state 28

    (13) expression -> term comparison_operator term .

    SEPARATOR       reduce using rule 13 (expression -> term comparison_operator term .)


state 29

    (5) statement -> IDENTIFIER OPERATOR term OPERATOR term . SEPARATOR

    SEPARATOR       shift and go to state 33


state 30

    (11) block -> SEPARATOR SEPARATOR .

    RESERVED        reduce using rule 11 (block -> SEPARATOR SEPARATOR .)
    IDENTIFIER      reduce using rule 11 (block -> SEPARATOR SEPARATOR .)
    $end            reduce using rule 11 (block -> SEPARATOR SEPARATOR .)
    SEPARATOR       reduce using rule 11 (block -> SEPARATOR SEPARATOR .)


state 31

    (10) block -> SEPARATOR statement_list . SEPARATOR

    SEPARATOR       shift and go to state 34


state 32

    (8) statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED . block
    (9) statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED . statement
    (10) block -> . SEPARATOR statement_list SEPARATOR
    (11) block -> . SEPARATOR SEPARATOR
    (4) statement -> . RESERVED IDENTIFIER OPERATOR expression SEPARATOR
    (5) statement -> . IDENTIFIER OPERATOR term OPERATOR term SEPARATOR
    (6) statement -> . IDENTIFIER OPERATOR term SEPARATOR
    (7) statement -> . RESERVED SEPARATOR expression SEPARATOR block
    (8) statement -> . RESERVED SEPARATOR expression SEPARATOR block RESERVED block
    (9) statement -> . RESERVED SEPARATOR expression SEPARATOR block RESERVED statement

    SEPARATOR       shift and go to state 26
    RESERVED        shift and go to state 4
    IDENTIFIER      shift and go to state 5

    block                          shift and go to state 35
    statement                      shift and go to state 36

state 33

    (5) statement -> IDENTIFIER OPERATOR term OPERATOR term SEPARATOR .

    RESERVED        reduce using rule 5 (statement -> IDENTIFIER OPERATOR term OPERATOR term SEPARATOR .)
    IDENTIFIER      reduce using rule 5 (statement -> IDENTIFIER OPERATOR term OPERATOR term SEPARATOR .)
    $end            reduce using rule 5 (statement -> IDENTIFIER OPERATOR term OPERATOR term SEPARATOR .)
    SEPARATOR       reduce using rule 5 (statement -> IDENTIFIER OPERATOR term OPERATOR term SEPARATOR .)


state 34

    (10) block -> SEPARATOR statement_list SEPARATOR .

    RESERVED        reduce using rule 10 (block -> SEPARATOR statement_list SEPARATOR .)
    IDENTIFIER      reduce using rule 10 (block -> SEPARATOR statement_list SEPARATOR .)
    $end            reduce using rule 10 (block -> SEPARATOR statement_list SEPARATOR .)
    SEPARATOR       reduce using rule 10 (block -> SEPARATOR statement_list SEPARATOR .)


state 35

    (8) statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED block .

    RESERVED        reduce using rule 8 (statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED block .)
    IDENTIFIER      reduce using rule 8 (statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED block .)
    $end            reduce using rule 8 (statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED block .)
    SEPARATOR       reduce using rule 8 (statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED block .)


state 36

    (9) statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED statement .

    RESERVED        reduce using rule 9 (statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED statement .)
    IDENTIFIER      reduce using rule 9 (statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED statement .)
    $end            reduce using rule 9 (statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED statement .)
    SEPARATOR       reduce using rule 9 (statement -> RESERVED SEPARATOR expression SEPARATOR block RESERVED statement .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for RESERVED in state 27 resolved as shift
